feat: add sources detection and render features
